Bug #170 fixed: Active work is now instant shown in Report and added some Unit Tests for Calculations